# WordFrequency

./: .gitignore  README.md  ordina.cabal  shell.nix
app/: Main.hs
lib/: WordFrequency.hs
tests/: Main.hs
