cabal-version:      2.4
name:               ordina
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Xander Remon van der Goot
maintainer:         xandervandergoot@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library word-frequency
    exposed-modules: WordFrequency
    hs-source-dirs:  lib
    build-depends:   base ^>=4.14.1.0,
                     unordered-containers,
                     text
    default-language: Haskell2010

executable ordina
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0,
                      word-frequency,
                      text,
                      servant,
                      servant-server,
                      wai,
                      warp,
                      aeson,      
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is:       Main.hs
  hs-source-dirs: tests/
  build-depends: base ^>=4.14.1.0,
                 word-frequency,
                 text,
                 unordered-containers,
                 hspec
  default-language: Haskell2010